--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 
 <ul class="list-group">
 
-  <li
+  <!-- <li
     routerLink=""
     routerLinkActive="active"
     [routerLinkActiveOptions]="{ exact: true}"
@@ -22,6 +22,25 @@
     routerLinkActive="active"
     class="list-group-item">
     Contact Page
+  </li> -->
+
+  <li
+    routerLink="countries/by-capital"
+    routerLinkActive="active"
+    class="list-group-item">
+    Por capital
+  </li>
+  <li
+    routerLink="countries/by-country"
+    routerLinkActive="active"
+    class="list-group-item">
+    Por country
+  </li>
+  <li
+    routerLink="countries/by-region"
+    routerLinkActive="active"
+    class="list-group-item">
+    Por region
   </li>
 
 </ul>
