--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -11,6 +11,7 @@
         <th>Bandera</th>
         <th>País</th>
         <th>Capital</th>
+        <th>Región</th>
         <th>Población</th>
         <th></th>
       </tr>
@@ -22,6 +23,7 @@
         <td><img [src]="country.flags.svg" [alt]="country.flags.alt" width="50px"></td>
         <td>{{ country.name.common }}</td>
         <td>{{ country.capital }}</td>
+        <td>{{ country.region }}</td>
         <td>{{ country.population | number }}</td>
         <td><a href="#">Ver más</a></td>
       </tr>
