--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,7 +5,7 @@
   <div class="col">
     <!-- SearchBox -->
     <shared-search-box
-      (onValue)="searchByCapital($event)"
+      (onValue)="searchBy($event)"
       placeholder="Buscar por capital">
     </shared-search-box>
   </div>
