--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,11 +1,11 @@
-<h2>Por Capital</h2>
+<h2>Por País</h2>
 <hr>
 
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
     <shared-search-box
-      (onValue)="searchByCountry($event)"
+      (onValue)="searchBy($event)"
       placeholder="Buscar por país">
     </shared-search-box>
   </div>
