--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -25,7 +25,9 @@
         <td>{{ country.capital }}</td>
         <td>{{ country.region }}</td>
         <td>{{ country.population | number }}</td>
-        <td><a href="#">Ver más</a></td>
+        <td>
+          <a [routerLink]="['/countries/by', country.cca3]">Ver más</a>
+        </td>
       </tr>
     </tbody>
 
