--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,16 +4,20 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
+    <!-- (onValue)="searchByCapital($event)" -->
     <shared-search-box
-      (onValue)="searchBy($event)"
-      placeholder="Buscar por capital">
+    (onDebounce)="searchByCapital($event)"
+    placeholder="Buscar por capital"
+    [initialValue]="initialValue">
     </shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
-    <!-- Tabla de resultados -->
+
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
+
     <hr>
     <countries-table [countries]="countries"></countries-table>
   </div>
